Pending changes in the mainline
===============================

=> Minimum Orthanc version: 1.11.3 <=
=> Recommended SDK version: 1.12.4 <=
=> Minimum SDK version: 1.11.3 <=

* New default permissions to Q&R remote modalities
* Maintenance: Use Orthanc SDK 1.12.4 by default to benefit from more detailed logging.
* Fix default permission for /dicom-web/servers/../stow

2025-04-29 - v 0.9.2
====================

* When calling /dicom-web/studies with a resource token when no StudyInstanceUID 
  is specified in the query args, the plugin now returns an empty list of resources
  instead of returning a 403.  This notably prevents OHIF to display errors when requesting 
  prior studies while still preserving the security since no resources are returned.
* Added support for /dicom-web/studies/../thumbnail.


2025-04-01 - v 0.9.1
====================

* The plugin is now using the HttpClient from the Orthanc core instead of its
  own HttpClient which should enable support for https since the plugin
  is not built with SSL support.
* New default permission to upload to ^/DICOM_WEB_ROOT/studies/([.0-9]+)
  (https://orthanc.uclouvain.be/bugs/show_bug.cgi?id=244)


2025-02-27 - v 0.9.0
====================

* The plugin now filters out all unauthorized labels from the "Labels" fields
  in the responses of these API routes:
  - /tools/find
  - /studies/{id} & similar routes
  - /studies/{id}/series & similar routes
  - /series/{id}/study & similar routes
  - /series/{id}/labels & similar routes
  In the past, this was only done in /tools/labels
* Allow using the auth-plugin together with "AuthenticationEnabled": true.
  https://discourse.orthanc-server.org/t/user-based-access-control-with-label-based-resource-access/5454
* Added a default permission for /auth/tokens/volview-viewer-publication
* New standard configuration "volview"


2025-01-22 - v 0.8.2
====================

* Fix forbidden access when the PatientID and StudyInstanceUID are identical.