@@ -8,6 +8,13 @@ Pending changes in the mainline
 * New default permissions to Q&R remote modalities
 * Maintenance: Use Orthanc SDK 1.12.4 by default to benefit from more detailed logging.
 * Fix default permission for /dicom-web/servers/../stow
+* When calling /dicom-web/studies with a resource token when no StudyInstanceUID 
+  is specified in the query args, the plugin now adds a filter on StudyInstanceUID=X|Y where
+  X & Y are the StudyInstanceUIDs of the resource token.  
+  This will only work if the authorization service returns a "resources" field to the /tokens/decode route.  
+  This notably prevents OHIF to display errors when requesting 
+  prior studies while still preserving the security since only the authorized resources are returned.
+
 
 2025-04-29 - v 0.9.2
 ====================
